src/styles/style.scss
/* ... */
.preview-img {
  width: 500px;
}

body {
  height: 100vh;
  font-family: var(--body-font);
  font-weight: 300;
  background-color: var(--color-off-white);
  #root {
    height: 100%;
  }
  main {
    height: 90vh;
  }
}

#splashscreen {
  position: relative;
  height: 100vh;
  overflow: hidden;
  background-image: linear-gradient(0deg, #252f15, #3a682b, #1f58a5);
  svg {
    position: absolute;
    top: -6.5vh;
    left: -30vw;
    transform: scale(0.85);
  }
  .buttons {
    position: absolute;
    top: 460px;
    bottom: 0;
    left: 0;
    right: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    a {
      margin-bottom: 1.2rem;
      color: rgb(247, 240, 230);
    }
    button {
      @include global-button();
    }
  }
}

#register,
#login {
  h1 {
    font-family: var(--wilderness-font);
    font-size: 3.7rem;
    text-align: center;
    margin: 2rem 0;
  }
  form {
    display: flex;
    flex-direction: column;
    align-items: center;
    div {
      text-align: center;
    }
    label {
      margin-bottom: 0.3rem;
    }
    input {
      padding: 0.5rem;
      margin-bottom: 1rem;
    }
    button {
      @include global-button();
      margin-top: 1rem;
    }
  }
}

#homepage {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  height: 100%;
  .home-btns {
    display: flex;
    flex-direction: column;
    align-items: center;
    button {
      margin-bottom: 20px;
    }
  }

  .hero {
    height: 45vh;
    width: 90vw;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    justify-content: center;
    align-items: center;
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
      url("../assets/hero-img.jpg");
    background-repeat: no-repeat;
    background-size: cover;

    h1 {
      font-family: var(--wilderness-font);
      color: white;
      font-size: 4rem;
      text-align: center;
      margin: auto;
    }
  }

  button {
    @include global-button();
    // min-width: 15rem;
    // border: none;
    // padding: 1.2rem 2rem;
    // background-color: var(--color-orange);
    // border-radius: 25px;
    // color: white;
    // text-transform: uppercase;
    // font-family: sans-serif;;;
  }
}

#hotels {
  h1 {
    font-family: var(--wilderness-font);
    text-align: center;
    margin: 1.6rem;
    font-size: 2.6rem;
  }
  article.hotel-tile {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    margin: 1.6rem;
    background-color: var(--color-off-white);
    box-shadow: 3px 3px 10px 2px rgba(0, 0, 0, 0.4),
      -3px -3px 10px 2px rgba(255, 255, 255, 0.9);
    border-radius: 20px;
    padding: 0.2rem;
    .hotel-info {
      margin: 1rem;
    }
    img {
      max-width: 90%;
    }
    h2 {
      margin: 1.2rem;
      margin-top: 0.2rem;
      font-family: var(--wilderness-font);
      font-size: 2.3rem;
    }
    p {
      margin: 1.2rem;
    }
    button {
      @include global-button();
    }
    .star-number {
      font-family: var(--body-font);
      color: var(--color-forest-green);
      text-decoration: underline;
      font-size: 0.82rem;
      margin-left: 0.4rem;
    }
  }
}

#browse {
  .sort-by-state {
    display: flex;
    justify-content: center;
    flex-direction: column;
    margin: 1rem auto;
    max-width: 11rem;
    p {
      padding-right: 0.25rem;
      text-align: center;
    }
  }
  h1 {
    font-family: var(--wilderness-font);
    text-align: center;
    font-size: 5rem;
    margin: 1rem;
  }
  a {
    text-decoration: none;
    font-family: var(--wilderness-font);
    color: black;
    .tile {
      text-align: center;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      margin: 1.6rem;
      background-color: var(--color-off-white);
      box-shadow: 3px 3px 10px 2px rgba(0, 0, 0, 0.4),
        -3px -3px 10px 2px rgba(255, 255, 255, 0.9);
      border-radius: 20px;
      padding: 0.2rem;
      h2 {
        font-size: 2.5rem;
        margin: 1.2rem;
      }
      h3 {
        font-size: 1.9rem;
        margin: 1.2rem;
      }
      .rating {
        margin-bottom: 1rem;
        .star-number {
          font-family: var(--body-font);
          color: var(--color-forest-green);
          text-decoration: underline;
          font-size: 0.82rem;
          margin-left: 0.2rem;
        }
        svg {
          transform: scale(1.2);
          margin: 0 2px;
        }
      }
    }
    img {
      max-width: 90%;
    }
  }
}

#navbar {
  background-color: var(--color-forest-green);
  width: 100vw;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 10vh;
  img.logo {
    display: none;
  }
  ul {
    display: flex;
    // justify-content: space-evenly;
    list-style: none;
    max-width: 100%;
    padding: 0em;
    .nav-btn {
      margin: 0 10px;
      display: flex;
      align-items: center;
      border-radius: 8px;
      height: 5vh;
      border: 2px solid var(--color-off-white);
      a {
        color: var(--color-off-white);
        text-decoration: none;
        text-transform: uppercase;
        font-size: 1rem;
        font-family: var(--body-font);
        padding: 0 10px;
      }
    }
    .nav-btn:hover {
      background-color: orange;
    }
  }
}
/* ... */

